# krill

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  bench.sh  benchmark.py  stats.py  stresstest.py
docs/: index.html
examples/: BinaryTreeNoMaintenance.pl  CoarseSet.pl  FemrsTreeNoMaintenance.pl  FineSet.pl  FineSetWithHint.pl  Harris.pl  HarrisWaitFreeFindNoMark.pl  LazySet.pl  Michael.pl  MichaelWaitFreeFind.pl  NoUnlockSet.pl  ORVYY.pl  ORVYY1.pl  ORVYY2.pl  OptimisticSet.pl  PatelWies.pl  Skiplist2.pl  VechevDCasSet.cola  VechevYahavCas.pl  VechevYahavDCas.pl  check.pl  test.pl  test.txt  test2.txt  transformed.cola
examples/buggy/: 01_null_VechevYahavDCas.pl  02_nolink_Harris.pl  02_nolink_Michael.pl  02_nolink_ORVYY.pl  03_cycle_Harris.pl  (+33 more)
include/: timer.hpp
scripts/: eval.sh  mk_footprints.sh  mk_graphs.sh  mk_latex.py  mk_pdf.sh  setup.sh
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  encoding.cpp  encoding_encode.cpp  encoding_solve.cpp  flowgraph.cpp  flowgraph_make.cpp  linearizability.cpp  static.cpp  util_effects.cpp  util_eval.cpp  util_memory.cpp  util_stack.cpp  util_symbolic.cpp
src/engine/encoding/: encode.cpp  encoding.cpp  graph.cpp  internal.hpp  solve.cpp  spec.cpp
src/engine/flowgraph/: flowgraph.cpp  make.cpp
src/engine/footprint/: constraint.cpp  feval.cpp
src/engine/proof/: api.cpp  cmd.cpp  common.cpp  macro.cpp  stmt.cpp  test.hpp
src/engine/solver/: access.cpp  ful.cpp  future.cpp  implication.cpp  interference.cpp  join.cpp  json.cpp  locks.cpp  past.cpp  post_assign_read.cpp  post_assign_var.cpp  post_assign_write.cpp  post_assume.cpp  post_malloc.cpp  scope.cpp  solver.cpp  stability.cpp  unsat.cpp  widen.cpp
src/engine/util/: collect.cpp  eval.cpp  memory.cpp  reachability.cpp  spec.cpp  stack.cpp  symbolic.cpp
src/heal/: CMakeLists.txt  flow.cpp  logic.cpp  logic.hpp  properties.cpp  properties.hpp  symbolic.cpp  util.hpp  visitors.cpp  visitors.hpp
src/heal/util/: conjoin.cpp  construct.cpp  contains.cpp  copy.cpp  equal.cpp  inline.cpp  print.cpp  replace.cpp  simplify.cpp  symbolic.cpp
src/heal/utilimpl/: conjoin.cpp  construct.cpp  contains.cpp  copy.cpp  equal.cpp  flatten.cpp  print.cpp  replace.cpp
src/logics/: CMakeLists.txt  ast.cpp  util_collect.cpp  util_copy.cpp  util_equal.cpp  util_make.cpp  util_print.cpp  util_rename.cpp  util_simplify.cpp  visitors.cpp
src/logics/util/: collect.cpp  copy.cpp  equal.cpp  memory.cpp  normalize.cpp  print.cpp  rename.cpp  simplify.cpp
src/parser/: CMakeLists.txt  Plankton.g4  parse.cpp  test.cpp
src/parser/antlr/: ExternalAntlr4Cpp.cmake
src/parser/builder/: builder.cpp  cmd.cpp  config.cpp  expr.cpp  formula.cpp  function.cpp  graphs.cpp  invariant.cpp  lookup.cpp  program.cpp  stmt.cpp  type.cpp  variable.cpp
src/plankton/: CMakeLists.txt  chkimp.hpp  config.cpp  config.hpp  encoder.hpp  encoding.hpp  error.cpp  error.hpp  flow.cpp  flow.hpp  logger.hpp  logic.cpp  logic.hpp  post.cpp  post.hpp  post_old.cpp  post_old.hpp  properties.cpp  properties.hpp  solver.cpp  solver.hpp  util.cpp  util.hpp  verify.cpp  verify.hpp  verify_config.cpp  verify_interference.cpp
src/plankton/backend/: z3chkimp.cpp  z3chkimp.hpp  z3encoder.cpp  z3encoder.hpp  z3error.cpp  z3error.hpp  z3expr.cpp  z3interface.cpp  z3visitor.cpp
src/plankton/solver/: encoder.cpp  encoder.hpp  implication.cpp  instantiation.cpp  invariants.cpp  join.cpp  mk_rules.cpp  mk_solver.cpp  mksolver.cpp  post.cpp  post.hpp  post_assign.cpp  post_assign_deref.cpp  post_assign_var.cpp  post_assume.cpp  post_malloc.cpp  scopes.cpp  solver.cpp  solverimpl.cpp  solverimpl.hpp
src/plankton/solverimpl/: join.cpp  linsolver.cpp  linsolver.hpp  make.cpp  scopes.cpp
src/plankton/solverimpl/post/: assign.cpp  assign_deref.cpp  assign_var.cpp  assume.cpp  info.cpp  info.hpp  malloc.cpp
src/plankton/util/: conjoin.cpp  contains.cpp  copy.cpp  equal.cpp  flatten.cpp  instantiate.cpp  print.cpp  remove.cpp  replace.cpp  solving.cpp  solving_old.cpp  solving_old.hpp
src/plankton/verifyimpl/: access.cpp  effects.cpp  interference.cpp  proof.cpp  renaming.cpp  verify.cpp
src/prover/: CMakeLists.txt  chkimp.hpp  config.cpp  config.hpp  encoder.hpp  encoding.hpp  error.cpp  error.hpp  flow.cpp  flow.hpp  linearizability.cpp  logger.hpp  proof.cpp  proofgen.cpp  solver.cpp  solver.hpp  util.cpp  util.hpp  verify.cpp  verify.hpp
src/prover/backend/: z3chkimp.cpp  z3chkimp.hpp  z3encoder.cpp  z3encoder.hpp  z3error.cpp  z3error.hpp  z3expr.cpp  z3interface.cpp  z3visitor.cpp
src/prover/solverimpl/: join.cpp  linsolver.cpp  linsolver.hpp  make.cpp
src/prover/solverimpl/post/: info.cpp  malloc.cpp
src/prover/verifyimpl/: access.cpp  effects.cpp  interference.cpp  proof.cpp  renaming.cpp  verify.cpp
src/solver/: CMakeLists.txt  default_solver.cpp  default_solver.hpp  encoder.cpp  solver.cpp
src/solver/default/: candidates.hpp  default_solver.hpp  encoder.cpp  encoder.hpp  eval.cpp  eval.hpp  expand.hpp  flowgraph.cpp  flowgraph.hpp  helpers.cpp  interference.cpp  join.cpp  post.cpp  post_assign.cpp  post_heap.cpp  post_helper.hpp  post_mem.cpp  scope.cpp
src/solver/post/: assign.cpp  assign_deref.cpp  assign_var.cpp  assume.cpp  default_solver.cpp  info.hpp  malloc.cpp  postprocess.cpp
src/solver/z3encoder/: z3encoder.cpp  z3error.cpp  z3visitor.cpp
src/tool/: CMakeLists.txt  Main.cpp  Michael.cpp  ORVYY.cpp  Test.cpp  ToolTest.cpp  VechevYahavCAS.cpp  VechevYahavDCAS.cpp  cfg2string.hpp  main.cpp  main2.cpp  testing.hpp
src/tool/old/: Michael.cpp  ORVYYmod.cpp  VechevYahavDCAS.cpp  chkimp.hpp  interference.cpp  join.cpp  linsolver.hpp  make.cpp  remove.cpp  scopes.cpp  stuff  variables.cpp
src/tool/old/old/: assign_deref.cpp  assign_var.cpp  assume.cpp  default_solver.cpp  info.cpp  info.hpp  malloc.cpp
src/tool/old/z3encoder/: z3chkimp.cpp  z3chkimp.hpp  z3encoder.cpp  z3encoder.hpp  z3error.hpp  z3expr.cpp  z3interface.cpp
src/tool/oldHealUtil/: contains.cpp  equal.cpp  replace.cpp
src/tool/tclap/: ExternalTclap.cmake
test/: CMakeLists.txt  Main.cpp
(+101 files in other folders)
